Added text-field and constant-text-field classes to clean up code and differerentiate visually the output fields in the form

--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,12 @@
   justify-content: center;
   align-items: center;
 }
+
+.constant-text-field {
+  background-color: lightgrey;
+  width: 50px;
+}
+
+.text-field{
+  width: 50px;
+}
