--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,14 @@
 .constant-text-field {
   background-color: lightgrey;
   width: 50px;
+  height: 20px;
 }
 
 .text-field{
   width: 50px;
+  height: 20px;
+}
+
+.h1{
+  font-size: 1.75vh;
 }
